Bug 1637837 adjust assert so as not to read mForceShutDown until it is known set r=padenot

mForceShutDown is set on the graph thread and so can be safely read
once the graph has handed control to the main thread.

Differential Revision: https://phabricator.services.mozilla.com/D75239